k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nodejs-apps
  labels:
    name: nodejs-apps
    environment: production
